# mangapp-server

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindLibUnRAR.cmake  find-libunrar.cmake
include/crow/: ci_map.h  common.h  crow.h  dumb_timer_queue.h  http_connection.h  http_parser_merged.h  http_request.h  http_response.h  http_server.h  json.h  logging.h  middleware.h  middleware_context.h  mustache.h  parser.h  query_string.h  routing.h  settings.h  socket_adaptors.h  utility.h
include/libzip/: Makefile
src/: .FindLibZip.cmake.swp  .anjuta_sym_db.db  .gitignore  CMakeLists.txt  FindLibUnRAR.cmake  archive.cpp  archive.hpp  archive_7z.cpp  archive_7z.hpp  archive_7z_entry.cpp  archive_7z_entry.hpp  archive_entry.hpp  archive_rar.cpp  archive_rar.hpp  archive_rar_entry.cpp  archive_rar_entry.hpp  archive_zip.cpp  archive_zip.hpp  archive_zip_entry.cpp  archive_zip_entry.hpp  base64.hpp  directory_entry.hpp  directory_file_entry.cpp  directory_file_entry.hpp  file_enumeration.hpp  http_client.cpp  http_client.hpp  http_helper.cpp  http_helper.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_utility.cpp  http_utility.hpp  image.cpp  image.hpp  library.cpp  library.hpp  main.cpp  (+28 more)
static/css/: common.css  reader.css
static/html/: details-template.html  index-template.html  login.html  reader-template.html
static/js/: details.js  index.js  login.js  reader.js
